K8S/accounting-mssql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounting-mssql
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: accountingmssql
  template:
    metadata:
      labels:
        app: accountingmssql
    spec:
      containers:
        - name: accountingmssql
          image: mcr.microsoft.com/mssql/server:2017-latest
          ports:
            - containerPort: 1433
          volumeMounts:
          - mountPath: /var/opt/mssql/data
            name: mssqldb
      volumes:
      - name: mssqldb
        persistentVolumeClaim:
          claimName: accounting-mssql-claim
---
apiVersion: v1
kind: Service
metadata:
  name: accounting-mssql-clusterip
spec:
  type: ClusterIP
  selector:
    app: accountingmssql
  ports:
  - name: mssql
    protocol: TCP
    port: 1433
    targetPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: accounting-mssql-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: accountingmssql
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
